--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,6 @@
     	<h1>My Name: Piraboon Piyawarapong</h1>
         <p>Id: 6422781466</p>
         <h1>Test adding message</h1>
+        <p>My country: Thailand</p>
     </body>
 </html>
