--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-    	<h1>My First Static Web App</h1>
-    	<h1>My Name: Piraboon Piyawarapong</h1>
-        <p>Id: 6422781466</p>
-        <h1>Test adding message</h1>
-        <p>My country: Thailand</p>
+        <h1>My Name: <MY_NAME></h1>
+        <p>Id: <MY_ID></p>
+        <img src="https://graduateadmissions.siit.tu.ac.th/plugin/img/siitlogo.png" alt="">
     </body>
 </html>
