--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <h1>My First Static Web App</h1>
         <h1>My Name: <MY_NAME></h1>
         <p>Id: <MY_ID></p>
         <img src="https://graduateadmissions.siit.tu.ac.th/plugin/img/siitlogo.png" alt="">
